2002-04-10  Seth Nickell  <snickell@stanford.edu>

	* gnome-ui-properties.c: (create_dialog):
	* gnome-ui-properties.glade:
	* ui-properties.glade:

	Somebody started rennaming the glade file but didn't follow
	through. Fixing the build by finishing the change.
	
2002-03-21  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-ui-properties.c (toolbar_to_widget): Check GConf value type

2002-03-21  Dave Camp  <dave@ximian.com>

	* gnome-ui-properties.c: (show_handlebar), (set_toolbar_style),
	(toolbar_style_cb), (set_have_icons): New functions.
	(toolbar_detachable_cb): Call show_handlebar.
	(menus_have_icons_cb): Call set_have_icons.
	(setup_dialog): Connect to the style peditor's value_changed signal,
	and set the initial states of the example widgets.

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* gnome-ui-properties.c (*_to/from_widget): Convert to new signature.
	
2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: s/PACKAGE/GETTEXT_PACKAGE/g
	* gnome-ui-properties.c: Same here.
	
2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* gnome-ui-properties.c (main): Create changeset.

2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* Make dialog Apply/Close.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-ui-properties.c (dialog_button_clicked_cb): Use GtkDialog

2002-02-01  Seth Nickell  <snickell@stanford.edu>

	* behavior-capplet.png:

	Change to Jimmac's alternate behavior icon.

Mon Jan 28 22:18:34 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-ui-properties.c (create_dialog): install globally

Mon Jan 28 22:09:30 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-ui-properties.c: completely rethink this dialog

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* behavior.desktop.in:

	Add Categories field.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Update

	* main.c (main): Remove Ximian archiver stuff

2002-01-14  Richard Hestilow  <hestilow@ximian.com>
