@@ -1,3 +1,7 @@
+2002-04-02  Jody Goldberg <jody@gnome.org>
+
+	* gnome-ui-properties.c (setup_dialog) : suppress warnings.
+
 2002-04-10  Seth Nickell  <snickell@stanford.edu>
 
 	* gnome-ui-properties.c: (create_dialog):
